busybox.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: busyb
  labels:
    name: busyb
spec:
  containers:
    - image: busybox
      name: busyb
      command:
        - sleep
        - "3600"
      resources:
        limits:
          memory: 128Mi
          cpu: 500m
