svc1.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc1
spec:
  type: ExternalName
  externalName: cricinfo.com
