svc2.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc2
spec:
  type: ExternalName
  externalName: cricinfo.com
