svcimages.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcimages
spec:
  selector:
    run: images
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
