svcteams.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcteams
spec:
  selector:
    run: teams
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
