upservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-service
spec:
  ports:
  - protocol: TCP
    port: 80

---

apiVersion: v1
kind: Endpoints
metadata:
  name: mexternal-service
subsets:
  - addresses:
      - fqdn: ponggame.org
    ports:
      - port: 80
