multingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image
spec:
  rules:
    - host: sky.net
      http:
        paths:
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: web1
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
spec:
  rules:
    - host: sky.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web1
                port:
                  number: 80
